macro(add_int_example name)
	file(GLOB src ${name}/*.hpp ${name}/*.cpp)
	add_executable(tcl.rll.examples.${name} ${src})
	target_link_libraries(tcl.rll.examples.${name} tcl.rll.int)
	set_target_properties(tcl.rll.examples.${name} PROPERTIES COMPILE_DEFINITIONS "TCL_RLL_INT")
endmacro(add_int_example)

add_int_example(grid_world_action)
add_int_example(grid_world_state)
add_int_example(tic_tac_toe)
add_int_example(tic_tac_toe_action)
